# LUCID-AGENT-DEMO

./: .gitignore  CLAUDE.md  REPL_README.md  TODO.md  categories.py  categories_mapping.py  contracts.py  demo_bank.py  demo_framework_language.py  pyproject.toml  requirements.txt
.cursor/plans/: agentic_architecture_refactor_3b391ec1.plan.md
agents/: __init__.py  csv_mapper.py  db_manager.py  db_manager_tools.py  ledger_categorizer.py  ledger_tools.py
agents/budget_onboarding/: agent.py  tools.py
agents/etl_loader/: agent.py  tools.py
agents/labeller/: agent.py  rules_flow.py  tools.py
bank/: __init__.py  db_provider.py  provider.py  simulated.py
data/user_terminal_session/: debugging.md
db/: db_schema.py  queries.py
docs/: IMPORT_AND_LEDGER_CATEGORIZATION.md  STAGE_1.md  STAGE_2.md  STAGE_3.5.md  STAGE_3.md
ingest/: __init__.py  account_detect.py  accounts.py  cli.py  csv_detect.py  csv_normalize.py  importer.py  profiles.py
llm/: __init__.py  config.py  provider.py  tool_definitions.py
orchestrator/: context_assembler.py  repl.py  router.py  startup.py
skills/: skill_loader.py
tests/: test_account_detect.py  test_bank.py  test_bucket_classifier.py  test_categories.py  test_category_import.py  test_csv_mapper.py  test_enrichment.py  test_etl_normalizer.py  test_ingest_csv.py  test_ledger_tools.py  test_merchant_override.py  test_multi_account_import.py  test_name_cleaner.py  test_skill_loader.py  test_startup.py  test_tools.py
tools/: __init__.py  budget.py  categorize.py  dashboard.py  enrichment.py  feasibility.py  split.py
wiki/: INDEX.md
(+60 files in other folders)
